--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -32,7 +32,7 @@
             <h1>Apache Cordova</h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">Ben is great, everything is also Great</p>
-                <p class="event received">Device is Ready</p>
+                <p class="event received">Device is Ready if this an android device!</p>
             </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
